--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/1.gif">
+        <img class="hero-img" src="./1.gif">
         <h1 class="hero-heading">Omkar Joshi the <span class="heading-inverted"> web developer</span></h1>
     </header>
 
