--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/Omkar_Joshi04">
+                <a class="link" href="https://twitter.com/ye_joshya">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </li>
