--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
 
           <a
             class="link link-primary"
-            href="https://csb-rmzkz.netlify.app/
+            href="https://1zuc3y.csb.app/
             "
             >Live Project</a
           >
