--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
           >
           <a
             class="link link-secondary"
-            href="https://github.com/joshi-omkar/stock-profit-and-loss
+            href="https://codesandbox.io/s/1zuc3y
             "
             >View Source</a
           >
