--- a/project.html
+++ b/project.html
@@ -47,13 +47,13 @@
 
           <a
             class="link link-primary"
-            href="https://1zuc3y.csb.app/
+            href="https://zxywym-3000.preview.csb.app/
             "
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://codesandbox.io/s/1zuc3y
+            href="https://github.com/joshi-omkar/stockProfitAndLoss
             "
             >View Source</a
           >
@@ -248,12 +248,12 @@
             my projects and blogs.
           </p>
 
-          <a class="link link-primary" href="https://hiq3h.csb.app/"
+          <a class="link link-primary" href="https://omkar-joshi-portfolio.netlify.app/"
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://github.com/tanaypratap/neogcamp-lesson-five-assignments"
+            href="https://github.com/joshi-omkar/portfolioNgcamp"
             >View Source</a
           >
         </article>
