changes in projects

--- a/project.html
+++ b/project.html
@@ -47,12 +47,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://zxywym-3000.preview.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/stockProfitAndLoss
             "
             >View Source</a
@@ -68,12 +69,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://qtq5rq.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/birthdate-palindrome
             "
             >View Source</a
@@ -92,12 +94,13 @@
 
           <a
             class="link link-primary"
-            href="https://csb-qu0po.netlify.app/
+            target="_blank"
+            href="https://csb-sgffhc.netlify.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/fun-with-triangle
             "
             >View Source</a
@@ -114,12 +117,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://l0197.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/is-Your-Birthdate-is-lucky
             "
             >View Source</a
@@ -135,12 +139,13 @@
 
           <a
             class="link link-primary"
-            href="https://cjw87.csb.app/
+            target="_blank"
+            href="https://p6eg1o.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/cash-register
             "
             >View Source</a
@@ -156,12 +161,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://2td8k.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/recomendo-app
             "
             >View Source</a
@@ -177,12 +183,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://s1sgv.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/know-animal
             "
             >View Source</a
@@ -201,12 +208,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://dothraki-talk-1.netlify.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/Dothraki-Talk
             "
             >View Source</a
@@ -225,12 +233,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://n1x1h.csb.app/
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/bananaTranslator
             "
             >View Source</a
@@ -248,11 +257,14 @@
             my projects and blogs.
           </p>
 
-          <a class="link link-primary" href="https://omkar-joshi-portfolio.netlify.app/"
+          <a
+            class="link link-primary"
+            target="_blank"
+            href="https://omkar-joshi-portfolio.netlify.app/"
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/portfolioNgcamp"
             >View Source</a
           >
@@ -270,12 +282,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://replit.com/@joshiomkar/friendsQuiz?embed=true
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/friends-quiz
             "
             >View Source</a
@@ -294,12 +307,13 @@
 
           <a
             class="link link-primary"
+            target="_blank"
             href="https://replit.com/@joshiomkar/firstCLIApp?embed=true
             "
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link-secondary" target="_blank"
             href="https://github.com/joshi-omkar/firstCliApp
             "
             >View Source</a
@@ -314,17 +328,17 @@
 
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/joshi-omkar">
+          <a class="link" href="https://github.com/joshi-omkar"  target="_blank">
             <i class="fab fa-github fa-2x"></i>
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://twitter.com/ye_joshya">
+          <a class="link" href="https://twitter.com/ye_joshya"  target="_blank">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://linkedin.com/in/joshiomkar04">
+          <a class="link" href="https://linkedin.com/in/joshiomkar04"  target="_blank">
             <i class="fab fa-linkedin-in fa-2x"></i>
           </a>
         </li>
