--- a/blogs.html
+++ b/blogs.html
@@ -60,17 +60,17 @@
         <small>connect with me..</small>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/joshi-omkar">
+                <a class="link" href="https://github.com/joshi-omkar"  target="_blank">
                     <i class="fab fa-github fa-2x"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/ye_joshya">
+                <a class="link" href="https://twitter.com/ye_joshya"  target="_blank">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://linkedin.com/in/joshiomkar04">
+                <a class="link" href="https://linkedin.com/in/joshiomkar04"  target="_blank">
                     <i class="fab fa-linkedin-in fa-2x"></i>
                 </a>
             </li>
