--- a/project.html
+++ b/project.html
@@ -155,9 +155,9 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>Animals and Nature React App</h1>
+          <h1>Books and Series Recomendo App</h1>
           <small>Aug, 2021</small>
-          <p>Find which animal emoji is look like. Made in ReactJS</p>
+          <p>Find books and Series here!! Made in ReactJS</p>
 
           <a
             class="link link-primary"
