Update projects and blogs

--- a/project.html
+++ b/project.html
@@ -38,24 +38,26 @@
     <ul class="list-non-bullet">
       <li class="odd">
         <article class="showcase-list container container-center">
-          <h1>Stocks Returns Calculator ?</h1>
-          <small>Aug, 2021</small>
+          <h1>Order Up! – Smart Food Ordering System</h1>
+          <small>March-April, 2023</small>
           <p>
-            Stock returns calculator helps to get proft and loss and % proft and
-            loss. made in ReactJS
+            Developed "Order Up!," a groundbreaking web app featuring QR code
+            scanning technology for a streamlined dining experience,
+            incorporating prebooked orders to reduce wait times and offering an
+            intuitive UI with dynamic menu displays for improved customer
+            satisfaction and enhanced usability.
           </p>
 
           <a
             class="link link-primary"
             target="_blank"
-            href="https://zxywym-3000.preview.csb.app/
-            "
-            >Live Project</a
+            href="https://drive.google.com/file/d/16xlfhRe6YaZAAc7HO24yi2n5XQ4wYQMt/view"
+            >Video Link</a
           >
           <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/stockProfitAndLoss
-            "
+            class="link link-secondary"
+            target="_blank"
+            href="https://github.com/joshi-omkar/smart-food-ordering-system"
             >View Source</a
           >
         </article>
@@ -63,21 +65,29 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>Is your Birthdate a Palindrome ?</h1>
-          <small>Aug, 2021</small>
-          <p>Check your birthdate is palindrome or not. Made in ReactJS</p>
+          <h1>TakeIt – E-commerce site</h1>
+          <small>June, 2023</small>
+          <p>
+            A responsive e-commerce website was developed and launched using
+            React.js, incorporating crucial features like product listing, cart
+            management, and checkout, while also implementing user
+            authentication, address management, and wishlist functionality to
+            enhance security and convenience. Strong problem-solving skills were
+            demonstrated through the dynamic filtering, search functionality,
+            and seamless integration of cart and wishlist, resulting in an
+            engaging and user-friendly shopping experience for customers.
+          </p>
 
           <a
             class="link link-primary"
             target="_blank"
-            href="https://qtq5rq.csb.app/
-            "
+            href="https://takeit.vercel.app/"
             >Live Project</a
           >
           <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/birthdate-palindrome
-            "
+            class="link link-secondary"
+            target="_blank"
+            href="https://github.com/joshi-omkar/e-commerce"
             >View Source</a
           >
         </article>
@@ -85,24 +95,28 @@
 
       <li class="odd">
         <article class="showcase-list container container-center">
-          <h1>Do you know your Triangles ?</h1>
-          <small>Aug, 2021</small>
+          <h1>it's fomo</h1>
+          <small>Jul, 2023</small>
           <p>
-            Find the basic calculator for triangles and take a quiz to test your
-            knowledge. Made in ReactJs
+            The "Fomo" social media web application was successfully developed
+            and deployed using React.js, featuring post creation, liking,
+            editing, and deletion capabilities, as well as a user feed with
+            sorting and filtering options. User profile functionalities were
+            also implemented, including avatar selection, bio and portfolio URL
+            addition, follow/unfollow features, bookmarking, and secure user
+            authentication with signup, login, and logout capabilities.
           </p>
 
           <a
             class="link link-primary"
             target="_blank"
-            href="https://csb-sgffhc.netlify.app/
-            "
+            href="https://itsfomo.vercel.app/"
             >Live Project</a
           >
           <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/fun-with-triangle
-            "
+            class="link link-secondary"
+            target="_blank"
+            href="https://github.com/joshi-omkar/social-media"
             >View Source</a
           >
         </article>
@@ -110,217 +124,31 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>Is your Birthday Lucky ?</h1>
+          <h1>XMEME - Meme sharing webapp</h1>
 
-          <small>Aug, 2021</small>
-          <p>Check your birthdate is LUCK or NOT. Made in ReactJS</p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://l0197.csb.app/
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/is-Your-Birthdate-is-lucky
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li class="odd">
-        <article class="showcase-list container container-center">
-          <h1>Cash Register Manager</h1>
-          <small>Aug, 2021</small>
-          <p>Don't know how to make change, use this. Made in ReactJS</p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://p6eg1o.csb.app/
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/cash-register
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li>
-        <article class="showcase-list container container-center">
-          <h1>Books and Series Recomendo App</h1>
-          <small>Aug, 2021</small>
-          <p>Find books and Series here!! Made in ReactJS</p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://2td8k.csb.app/
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/recomendo-app
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li class="odd">
-        <article class="showcase-list container container-center">
-          <h1>Emoji Interpreter App</h1>
-          <small>Aug, 2021</small>
-          <p>An emoji interpreter app. made in ReactJs</p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://s1sgv.csb.app/
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/know-animal
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li>
-        <article class="showcase-list container container-center">
-          <h1>Dothraki Talk</h1>
-          <small>Aug, 2021</small>
+          <small>Feb, 2023</small>
           <p>
-            Fan of Game of Thorens. Translate the English into Dothraki. Made in
-            VanilaJS
+            Made a lightweight, fast web platform for meme sharing with
+            functionalities like upload, update and delete memes from platform.
+            Used JWT to authenticate the user and added like functionality for
+            memes.
           </p>
 
           <a
             class="link link-primary"
             target="_blank"
-            href="https://dothraki-talk-1.netlify.app/
-            "
-            >Live Project</a
+            href="https://drive.google.com/file/d/1cfKbJ02JJYiQJanVbZbuCXnzJStJjkTK/view"
+            >Video Link</a
           >
           <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/Dothraki-Talk
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li class="odd">
-        <article class="showcase-list container container-center">
-          <h1>Banana Translator App</h1>
-          <small>Aug, 2021</small>
-          <p>
-            Use this web app to convert English text to the language of minions.
-            Made in VanillaJS.
-          </p>
-
-          <a
-            class="link link-primary"
+            class="link link-secondary"
             target="_blank"
-            href="https://n1x1h.csb.app/
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/bananaTranslator
-            "
+            href="https://github.com/joshi-omkar/xmeme"
             >View Source</a
           >
         </article>
       </li>
 
-      <li>
-        <article class="showcase-list container container-center">
-          <h1>Personal Portfolio</h1>
-          <small>Aug, 2021</small>
-          <div className="mark1"></div>
-          <p>
-            This portfolio website is made using HTML and CSS. It contians all
-            my projects and blogs.
-          </p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://omkar-joshi-portfolio.netlify.app/"
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/portfolioNgcamp"
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li class="odd">
-        <article class="showcase-list container container-center">
-          <h1>Friends fan quiz</h1>
-          <small>Aug, 2021</small>
-          <p>
-            This is a Friends Quiz CLI App which I made using NodeJS. If you
-            wish to try it click the link below.
-          </p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://replit.com/@joshiomkar/friendsQuiz?embed=true
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/friends-quiz
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-
-      <li>
-        <article class="showcase-list container container-center">
-          <h1>Do you know me ?</h1>
-          <small>Aug, 2021</small>
-          <p>
-            This is my first CLI Quiz App made in NodeJS . It's based on how
-            well do you know me. Click below to play.
-          </p>
-
-          <a
-            class="link link-primary"
-            target="_blank"
-            href="https://replit.com/@joshiomkar/firstCLIApp?embed=true
-            "
-            >Live Project</a
-          >
-          <a
-            class="link link-secondary" target="_blank"
-            href="https://github.com/joshi-omkar/firstCliApp
-            "
-            >View Source</a
-          >
-        </article>
-      </li>
-    </ul>
 
     <footer class="footer">
       <div class="footer-header">Social Media</div>
@@ -328,17 +156,21 @@
 
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/joshi-omkar"  target="_blank">
+          <a class="link" href="https://github.com/joshi-omkar" target="_blank">
             <i class="fab fa-github fa-2x"></i>
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://twitter.com/ye_joshya"  target="_blank">
+          <a class="link" href="https://twitter.com/ye_joshya" target="_blank">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://linkedin.com/in/joshiomkar04"  target="_blank">
+          <a
+            class="link"
+            href="https://linkedin.com/in/joshiomkar04"
+            target="_blank"
+          >
             <i class="fab fa-linkedin-in fa-2x"></i>
           </a>
         </li>
